# plato-torch

./: .gitignore  AGENTS.md  ARCHITECTURE-PLAN.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  nav_tiles.json  pyproject.toml  setup.py
docs/: training-rooms.md  training-seed-synergy.md
src/: __init__.py  cognitive_scaffold.py  instinct_net.py  room_presets.py  room_sentiment.py  tile_grabber.py  tile_ref_scanner.py  torch_room.py
src/plato_torch/: __init__.py  cognitive_scaffold.py  deadband_protocol.py  room_base.py  room_presets.py  torch_room.py
src/plato_torch/presets/: __init__.py  active.py  adversarial.py  collaborative.py  continual.py  contrastive.py  curriculum.py  deadband.py  distill.py  evolve.py  federate.py  fewshot.py  fractal.py  generate.py  ghost_injector.py  imitate.py  inverse_rl.py  lora_train.py  meta_learn.py  multitask.py  neurosymbolic.py  qlora.py  refraction.py  reinforce.py  room_base.py  self_supervised.py  server_room.py  supervised.py  wiki.py
src/presets/: __init__.py  active.py  adversarial.py  collaborative.py  continual.py  contrastive.py  curriculum.py  distill.py  evolve.py  federate.py  fewshot.py  generate.py  imitate.py  inverse_rl.py  lora_train.py  meta_learn.py  multitask.py  neurosymbolic.py  qlora.py  reinforce.py  self_supervised.py  supervised.py
tests/: test_torch_room.py
wiki/: cognitive-scaffold.md  presets.md  room-base.md  torch-room.md  wisdom.md
